<?xml version="1.0"?>
<package format="3">
  <name>four_omniwheel_robot</name>
  <version>0.0.1</version>
  <description>ROS 2 package for four omniwheel robot</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时依赖 -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>ros2launch</depend>

  <!-- 如果有测试，添加测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
