<?xml version="1.0"?>
<package format="2">
  <name>rm_mapping</name>
  <version>0.0.1</version>
  <description>ROS 2 Map Server Node</description>
  <maintainer email="3212929002@qq.com">Xlqmu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>